<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/selectableItemBackground">

        <ImageView
            android:id="@+id/iconImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/image_description"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_avatar_account_circle_120" />

        <TextView
            android:id="@+id/talkNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="60dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/description_talk_name"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/talkTimeTextView"
            app:layout_constraintEnd_toStartOf="@+id/talkTimeTextView"
            app:layout_constraintStart_toEndOf="@+id/iconImageView"
            app:layout_constraintTop_toTopOf="@+id/iconImageView" />


        <TextView
            android:id="@+id/talkContentTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/description_talk_content"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toBottomOf="@+id/notificationImageView"
            app:layout_constraintEnd_toStartOf="@+id/notificationImageView"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/iconImageView"
            app:layout_constraintTop_toTopOf="@+id/notificationImageView" />

        <TextView
            android:id="@+id/talkTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/description_talk_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/notificationImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/image_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/talkTimeTextView"
            app:srcCompat="@drawable/ic_baseline_notifications_off_24" />

        <View
            android:id="@+id/splitView"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="2dp"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iconImageView" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>